text amendments in header.html v.2

--- a/#source/header.html
+++ b/#source/header.html
@@ -1,28 +1,30 @@
 <header class="header">
-    <nav class="menu">
-        <ul class="menu__list">
-            <li class="menu__item1"><a href="#">Статьи</a></li>
-            <li class="menu__item2"><a href="#">Видеоматериалы</a></li>
-            <li class="menu__item3"><a href="#">Контакты</a></li>
-        </ul>
-    </nav>
-    <div class="logo">
-    	<div class="logo__icon">
-    		<img src="" alt="">
-    	</div>
-    	<div class="logo__title">
-    		<img src="" alt="">
-    	</div>
-    	<div class="logo__sub-title"></div>
+    <div class="wraper">
+    	<div class="search">
+            <div class="search__title">Поиск</div>
+            <div class="search__icon">
+                <img src="../img/search.png" alt="search">
+            </div>
+        </div>
+        <nav class="main-menu">
+            <ul class="main-menu__list">
+                <li class="main-menu__item1"><a href="#">Статьи</a></li>
+                <li class="main-menu__item2"><a href="#">Видеоматериалы</a></li>
+                <li class="main-menu__item3"><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="logo">
+            <div class="logo__icon">
+                <img src="../img/main_logo.png" alt="main logo">
+            </div>
+            <div class="logo__title">
+                <img src="../img/main-text_logo.png" alt="main-text logo">
+            </div>
+            <div class="logo__sub-title">Информационный портал о недвижимости</div>
+        </div>
+        
+        <div class="feedback">
+            <div class="feedback__buttom">Связаться с нами</div>
+        </div>
     </div>
-    <div class="header__search search">
-    	<div class="search__title">Поиск</div>
-    	<div class="search__icon">
-    		<img src="" alt="">
-    	</div>
-    	
-    </div>
-    <div class="feedback">
-    	<div class="feedback__buttom">Связаться с нами</div>
-    </div>
-</header>
+</header>			
